clusters/titania/apps/taskplanner/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskplanner
spec:
  selector:
    matchLabels:
      app: taskplanner
  template:
    metadata:
      annotations:
        secret.reloader.stakater.com/reload: taskplanner-config-vault
      labels:
        app: taskplanner
    spec:
      containers:
        - name: taskplanner
          image: ghcr.io/kmjayadeep/taskplanner-server:20250305072427 # {"$imagepolicy": "taskplanner:taskplanner"}
          resources:
            requests:
              memory: "50Mi"
              cpu: "25m"
            limits:
              memory: "100Mi"
              cpu: "250m"
