clusters/titania/apps/taskplanner/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskplanner-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - "*.cosmos.cboxlab.com"
    secretName: cosmos-cboxlab-cert
  rules:
  - host: taskplanner.cosmos.cboxlab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: taskplanner
            port:
              number: 8000
